@@ -31,7 +31,7 @@
     <attribute name="target" default="default"/>
     <sequential>
       <java failonerror="true" jar="${project.home}/lib/ant/lib/ant-launcher.jar" fork="true">
-        <jvmarg line="-Xmx812m -XX:MaxPermSize=152m"/>
+        <jvmarg line="-Xmx912m"/>
         <sysproperty key="jna.nosys" value="true" />
         <sysproperty key="java.awt.headless" value="true"/>
         <sysproperty key="gant.script" value="@{script}"/>
